@@ -111,6 +111,8 @@ Version 8.31
 29. Check for an overlong MARK name and give an error at compile time. The 
     limit is 255 for the 8-bit library and 65535 for the 16-bit library.
 
+30. JIT compiler update.
+
 
 Version 8.30 04-February-2012
 -----------------------------
